tests/snapshots/doctor__an_owned_link_replaced_by_a_lookalike.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.config/foot
  was replaced by a link that only looks like ricepilot's.
  rule: SAFETY.md, the ownership predicate (fact 3: its (dev, ino) must match the ledger)

  it points where the ledger says, but it is not the inode
  ricepilot made:
    now       dev <dev> ino <ino>
    recorded  dev <dev> ino <ino>

  something removed ricepilot's link and made its own. ricepilot
  cannot know what that something will do next, so every switch
  refuses it.

  run:
    # set it aside (nothing is lost), then let ricepilot link it again
    mv -T <HOME>/.config/foot <HOME>/.config/foot.set-aside
    ricepilot plan new
    ricepilot switch new --commit

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 2 owned links intact; the ledger and the manifests agree; 2 hypr trees have an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies
