tests/snapshots/doctor__desync_path_missing.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.local/share/ricepilot/profiles/new/profile.toml
  does not declare ~/.config/btop, which profile `new` owns.
  rule: D51 (a profile's manifest declares every path it owns)

  the ledger records the link
    <HOME>/.config/btop -> <HOME>/rice/new/btop
  as profile `new`'s.

  the manifest has no [[path]] for it — typically because the block
  `ricepilot adopt` appended was edited out — so the next
  `ricepilot switch new` would retire the link into the attic and
  leave the path empty. put this back at the end of the manifest:

    [[path]]
    dest       = "~/.config/btop"
    src        = "btop"
    kind       = "dir-link"
    activation = "relogin"

  run:
    # then this must say there is nothing to do for it
    ricepilot plan new

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 3 owned links intact; 2 hypr trees have an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies
