tests/snapshots/doctor__desync_src_differs.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.local/share/ricepilot/profiles/new/profile.toml
  says ~/.config/foot comes from src = "btop", and the link points elsewhere.
  rule: D51 (a profile's manifest and the ledger agree)

  the ledger records the link
    <HOME>/.config/foot -> <HOME>/rice/new/foot
  as profile `new`'s.

  the next `ricepilot switch new` re-points it at
    <HOME>/rice/new/btop
  if that is not what you meant, set src = "foot" again.

  run:
    # see what the next switch would do; this changes nothing
    ricepilot plan new

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 3 owned links intact; 2 hypr trees have an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies
