tests/snapshots/doctor__hypr_trees_with_no_entry_file_or_one_doctor_cannot_check.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/rice/bare/hypr
  has neither hyprland.conf nor hyprland.lua, and profile `bare` links it at ~/.config/hypr.
  rule: SAFETY.md R3 (nothing writes into a profile) — Hyprland would

  a Hyprland that finds no config writes a default hyprland.conf where
  it looked — through the link, into this profile's tree — and starts
  with that instead of your rice.

  give the tree an entry file, or take ~/.config/hypr out of
    <HOME>/.local/share/ricepilot/profiles/bare/profile.toml

  run:
    ls -la <HOME>/rice/bare/hypr

not checked, or worth knowing:
  - profile `luaconf`: <HOME>/rice/luaconf/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config); the manifest says hypr_dialect = "conf", but Hyprland loads hyprland.lua whenever it exists
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `withconf`: <HOME>/rice/withconf/hypr/hyprland.conf was not checked by doctor, which never builds the scratch copy the check needs; `ricepilot plan withconf` runs the sandboxed verify-config
  - profile `bare`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - profile `luaconf`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - profile `withconf`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 3 owned links intact; the ledger and the manifests agree; 4 hypr trees have an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies
