tests/snapshots/doctor__rescue_broken.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.local/state/ricepilot/rescue.sh
  cannot be relied on.
  rule: DESIGN.md §7, rung 3; D37

  `sh -n` rejects it:
    <what sh said>

  it says it restores generation 0000, the one before the current
  0001, but it is not the script ricepilot would write for it: it was
  edited, generation 0000 was, or an older ricepilot wrote it.

  it is rung 3 of the recovery ladder, the one for a TTY when nothing else
  works. do not rely on it as it is.

  run:
    sh -n <HOME>/.local/state/ricepilot/rescue.sh
    # rung 1 of the ladder still works; see what it would do
    ricepilot rollback
    # the next `switch` or `rollback --commit` writes the script again

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 3 owned links intact; the ledger and the manifests agree; 2 hypr trees have an entry file; 1 profile tree matches its recorded manifest; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies; no interrupted gc
