tests/snapshots/doctor__the_live_profile_requires_a_package_that_is_not_installed.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.local/share/ricepilot/profiles/new/profile.toml
  requires ricepilot-no-such-package-f3a1, which is not installed, and profile `new` is the one linked now.
  rule: D53; NOT-POSSIBLE.md#installing-packages

  the next login starts a rice whose programs are missing.
  ricepilot never installs anything; this is the command to run.

  run:
    paru -S --needed ricepilot-no-such-package-f3a1

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - profile `old` requires ricepilot-no-such-package-f3a1, which is not installed; `ricepilot switch old` refuses until: paru -S --needed ricepilot-no-such-package-f3a1
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 3 owned links intact; the ledger and the manifests agree; 2 hypr trees have an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies
